# rdkit_to_params

./: .gitignore  .readthedocs.yaml  README.md  atom_types.md  database_entries.md  former-setup.py  noxfile.py  pyproject.toml  requirements.txt  setup.py  sphinx-documentation.md
.readthedocs/: conf.py  index.rst  rdkit_to_params.cli.rst  rdkit_to_params.rdkitside.rst  rdkit_to_params.rst  requirements.txt
docs/: residue_properties.md
example/: official_PHE.params  round_trip.csv
rdkit_to_params/: __init__.py  _init_mixin.py  _io_mixin.py  _pyrosetta_mixin.py  _rdkit_convert.py  _rdkit_prep.py  constraint.py  entries.py  mol_from_compchem_block.py  version.py
rdkit_to_params/cli/: __init__.py
rdkit_to_params/rdkitside/: __init__.py  _rdkit_convert.py  _rdkit_inits.py  _rdkit_prep.py  _rdkit_rename.py  utilities.py
tests/: __init__.py  conftest.py  test_chi_and_proton_chi.py  test_complexity_reduction.py  test_covalent.py  test_internals.py  test_properties_and_ref.py  test_rama_prepro.py  test_virtual_shadow.py
tests/assets/: OHI.params  fake_PHE.params
