[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rdkit_to_params"
version = "1.3.1"
description = "Create or modify Rosetta params files (topology files) from scratch, RDKit mols or another params file."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Matteo Ferla", email = "matteo.ferla@gmail.com"},
]
urls = { "Homepage" = "https://github.com/matteoferla/rdkit_to_params", "Citation" = "https://advances.sciencemag.org/content/7/16/eabf8711" }
dependencies = [
    "rdkit",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest>=6.0", "nox", "ruff", "mypy", "radon"]

[project.scripts]
smiles-to-params = "rdkit_to_params.cli:smiles"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdkit_to_params*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["__init__.py", "test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP006", # Use list instead of List (requires Python 3.9+)
    "UP007", # Use X | Y instead of Union (requires Python 3.10+)
    "UP035", # Import from collections.abc (we support 3.7)
    "UP045", # Use X | None instead of Optional (requires Python 3.10+)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

