[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rdkit_to_params"
version = "1.3.3"
description = "Create or modify Rosetta params files (topology files) from scratch, RDKit mols or another params file."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matteo Ferla", email = "matteo.ferla@gmail.com"},
]
urls = { "Homepage" = "https://github.com/matteoferla/rdkit_to_params", "Citation" = "https://advances.sciencemag.org/content/7/16/eabf8711" }
dependencies = [
    "rdkit",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
extra = ["gemmi", "pandas"]
test = ["pytest>=6.0", "nox", "ruff", "mypy", "radon"]

[project.scripts]
smiles-to-params = "rdkit_to_params.cli:smiles"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdkit_to_params*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["__init__.py", "test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

